Upgrade to v6.5.0 of the SignalFx Terraform Provider

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -29,6 +29,7 @@
         "dataLink.ts",
         "detector.ts",
         "eventFeedChart.ts",
+        "gcp/getServices.ts",
         "gcp/index.ts",
         "gcp/integration.ts",
         "getAwsServices.ts",
@@ -42,6 +43,7 @@
         "opsgenie/index.ts",
         "opsgenie/integration.ts",
         "orgToken.ts",
+        "pagerduty/getIntegration.ts",
         "pagerduty/index.ts",
         "pagerduty/integration.ts",
         "provider.ts",
