Upgrade terraform-provider-signalfx to v6.11.0

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -47,6 +47,8 @@
         "pagerduty/index.ts",
         "pagerduty/integration.ts",
         "provider.ts",
+        "servicenow/index.ts",
+        "servicenow/integration.ts",
         "singleValueChart.ts",
         "slack/index.ts",
         "slack/integration.ts",
