Upgrade to v6.16.0 of the SignalFx Terraform Provider
Fixes: #163
Fixes: #164

Please Note that there is a breaking change...

`signalfx.listView` has been renamed upstream to be `signalfx.view`

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -41,7 +41,7 @@
         "jira/integration.ts",
         "listChart.ts",
         "logs/index.ts",
-        "logs/listChart.ts",
+        "logs/view.ts",
         "opsgenie/index.ts",
         "opsgenie/integration.ts",
         "orgToken.ts",
