make build_sdks

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -42,6 +42,7 @@
         "listChart.ts",
         "logs/index.ts",
         "logs/view.ts",
+        "metricRuleset.ts",
         "opsgenie/index.ts",
         "opsgenie/integration.ts",
         "orgToken.ts",
