make build_sdks

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -35,8 +35,9 @@
         "jira/index.ts",
         "jira/integration.ts",
         "listChart.ts",
-        "logs/index.ts",
-        "logs/view.ts",
+        "log/index.ts",
+        "log/timeline.ts",
+        "log/view.ts",
         "metricRuleset.ts",
         "opsgenie/index.ts",
         "opsgenie/integration.ts",
