Upgrade terraform-provider-signalfx to v8.1.0 (#263)
New resources:
log/timeline.Timeline
log/view.View

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -35,6 +35,9 @@
         "jira/index.ts",
         "jira/integration.ts",
         "listChart.ts",
+        "log/index.ts",
+        "log/timeline.ts",
+        "log/view.ts",
         "logs/index.ts",
         "logs/view.ts",
         "metricRuleset.ts",
