--- a/.ci-mgmt.yaml
+++ b/.ci-mgmt.yaml
@@ -2,6 +2,11 @@ provider: signalfx
 major-version: 7
 makeTemplate: bridged
 plugins:
+  - name: terraform
+    version: "1.0.16"
+    kind: converter
+
   - name: aws 
     version: "4.10.0"
 team: ecosystem
+pulumiConvert: 1
