--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -52,6 +52,8 @@
         "slack/index.ts",
         "slack/integration.ts",
         "slo.ts",
+        "slo/chart.ts",
+        "slo/index.ts",
         "tableChart.ts",
         "team.ts",
         "textChart.ts",
