--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -52,8 +52,7 @@
         "slack/index.ts",
         "slack/integration.ts",
         "slo.ts",
-        "slo/chart.ts",
-        "slo/index.ts",
+        "sloChart.ts",
         "tableChart.ts",
         "team.ts",
         "textChart.ts",
