Upgrade terraform-provider-signalfx to v9.5.0 (#617)
This PR was generated via `$ upgrade-provider pulumi/pulumi-signalfx
--kind=provider`.

---

- Updating Java Gen version from 0.17.0 to 0.18.0.
- Upgrading terraform-provider-signalfx from 9.4.1  to 9.5.0.
	Fixes #615

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -52,6 +52,7 @@
         "slack/index.ts",
         "slack/integration.ts",
         "slo.ts",
+        "sloChart.ts",
         "tableChart.ts",
         "team.ts",
         "textChart.ts",
