--- a/.ci-mgmt.yaml
+++ b/.ci-mgmt.yaml
@@ -6,8 +6,12 @@ plugins:
     version: "1.0.16"
     kind: converter
 
-  - name: aws 
+  - name: aws
     version: "4.10.0"
 team: ecosystem
 pulumiConvert: 1
 registryDocs: true
+esc:
+  enabled: true
+  environment: imports/github-secrets # No repo-specific secrets.
+
