--- a/mise.toml
+++ b/mise.toml
@@ -1,3 +1,3 @@
 [tools]
-"vfox-pulumi:pulumi/pulumi-converter-terraform" = "latest"
-"vfox-pulumi:pulumi/pulumi-aws" = "latest"
+"vfox-pulumi:pulumi/pulumi-converter-terraform" = "1.2.4"
+"vfox-pulumi:pulumi/pulumi-aws" = "7.16.0"
